<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity"
    android:id="@+id/activityMain">

    <Button
        android:id="@+id/btnNewInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/btnNewInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivMainImageShadow" />

    <Button
        android:id="@+id/btnStat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/btnGoToStatistics"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNewInput" />

    <Button
        android:id="@+id/btnSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/btnGo2Settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStat" />

    <ImageView
        android:id="@+id/ivMainImageShadow"
        android:layout_width="166dp"
        android:layout_height="166dp"
        android:layout_marginTop="32dp"
        android:rotationX="-6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_emoji_events_24"
        app:tint="@color/orange" />

    <ImageView
        android:id="@+id/ivMainImage"
        android:layout_width="155dp"
        android:layout_height="155dp"
        app:layout_constraintBottom_toBottomOf="@+id/ivMainImageShadow"
        app:layout_constraintEnd_toEndOf="@+id/ivMainImageShadow"
        app:layout_constraintStart_toStartOf="@+id/ivMainImageShadow"
        app:layout_constraintTop_toTopOf="@+id/ivMainImageShadow"
        app:srcCompat="@drawable/ic_baseline_emoji_events_24"
        app:tint="@color/burgundyAccent" />

    <TextView
        android:id="@+id/tvMainScreenText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:text="@string/preLoadStreak"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="@+id/ivMainImageShadow"
        app:layout_constraintEnd_toEndOf="@+id/ivMainImageShadow"
        app:layout_constraintStart_toStartOf="@+id/ivMainImageShadow"
        app:layout_constraintTop_toTopOf="@+id/ivMainImageShadow" />

    <TextView
        android:id="@+id/tvMainScreenText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="Total Inputs"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnNewInput"
        app:layout_constraintEnd_toEndOf="@+id/ivMainImageShadow"
        app:layout_constraintStart_toStartOf="@+id/ivMainImageShadow"
        app:layout_constraintTop_toBottomOf="@+id/ivMainImage" />

    <Button
        android:id="@+id/btnLogOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Log Out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSettings" />

</androidx.constraintlayout.widget.ConstraintLayout>